services/ingress/k8s-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-service-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: domain.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k8s-pod-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-pod-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - domain.example.com
      secretName: tls-secret
